css style added to fix the bg-image been cropped at the bottom on smaller devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Roboto&display=swap');
 
+html,body { height: 100%; min-height: 100%; }
+
 body {
     font-family: Roboto, sans-serif;
     margin: 0;
@@ -7,7 +9,7 @@ body {
     text-align: center;
     background-image: url("../images/backgroundimage.jpg");
     background-repeat: no-repeat;
-    background-position:  top;
+    background-position:  center;
     background-attachment: scroll; 
     background-size: cover;
 }
@@ -58,7 +60,7 @@ a:hover {
 }
 
   button:hover {
-    border: 10px solid red;
+    border: 10px solid green;
   }
 
   button {
